--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
-<html lang="en-us">
+<html lang="en-us" ng-app="app" ng-cloak>
 
 	<head>
 		<meta charset="utf-8">
 		<title>Tashows | Web & Media</title>
-		<script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+		<script src="https://code.angularjs.org/1.5.3/angular-route.min.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="stylesheet.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	</head>
 	
 	<body>
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="navbar navbar-inverse">
 		  <div class="container">
-		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse" aria-expanded="false">
 		        <span class="sr-only">Toggle navigation</span>
@@ -21,20 +22,22 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">Tashows</a>
+		      <a class="navbar-brand" href="#/">Tashows</a>
 		    </div>
 		
-		    <!-- Collect the nav links, forms, and other content for toggling -->
 		    <div class="collapse navbar-collapse" id="bs-navbar-collapse">
-		      	<ul class="nav navbar-nav navbar-right">
-			        <li class="active"><a href="#">Home</a></li>
-		            <li><a href="#">Services</a></li>
-		            <li><a href="#">Portfolio</a></li>
-		            <li><a href="#">Contact</a></li>
-		      	</ul>
-		    </div><!-- /.navbar-collapse -->
-		  </div><!-- /.container-fluid -->
+	      	<ul class="nav navbar-nav navbar-right">
+		        	<li><a href="#/">About</a></li>
+	            <li><a href="#/services">Services</a></li>
+	            <li><a href="#/portfolio">Portfolio</a></li>
+	            <li><a href="#/contact">Contact</a></li>
+	      	</ul>
+		    </div>
+		  </div>
 		</nav>
-		
+		<div class="container">
+			<div ng-view></div>
+		</div>
+		<script src="app.js"></script>
 	</body>
 </html>
