Implemented Portfolio Directive

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#/">Tashows</a>
+		      <a class="navbar-brand" href="#/" style="font-size: 1.5em;">Tashows</a>
 		    </div>
 		
 		    <div class="collapse navbar-collapse" id="bs-navbar-collapse">
 	      	<ul class="nav navbar-nav navbar-right">
 		        	<li><a href="#/">About</a></li>
-	            <li><a href="#/services">Services</a></li>
+	            <!--<li><a href="#/services">Services</a></li>-->
 	            <li><a href="#/portfolio">Portfolio</a></li>
 	            <li><a href="#/contact">Contact</a></li>
 	      	</ul>
@@ -39,6 +39,6 @@
 		<div class="container">
 			<div ng-view></div>
 		</div>
-		<script src="app.js"></script>
+		<script src="angularapp.js"></script>
 	</body>
 </html>
