--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,10 @@
-<h1>Contact</h1>
+<h2>Contact</h2>
+<hr>
+<div class="text-center">
+    <p>Email: info@tashows.com</p>
+    <p>Facebook: <a href="https://www.facebook.com/tasos.mas">Tasos Masx</a></p>
+    <p>LinkedIn: <a href="https://ca.linkedin.com/in/tasos-maschalidis-05b60257">Tasos Maschalidis</a></p>
+    <p>GitHub: <a href="https://github.com/Tashows">Tashows</a></p>
+    <p>Fiverr: <a href="https://www.fiverr.com/tashows">Tashows</a></p>
+    <p>Twitter: <a href="https://twitter.com/tashows">Tashows</a></p>
+</div>
