Added reviews and fixed typos

--- a/directives/portfolio-partial.html
+++ b/directives/portfolio-partial.html
@@ -5,6 +5,8 @@
     <div class="body-area">
         <h4>{{ title }}</h4>
         <p>{{ desc }}</p>
-        <p><a href="{{ extraUrl }}">{{ extra }}</a></p>
+        <p>
+            <a href="{{ extraUrl }}">{{ extra }}</a>
+        </p>
     </div>
 </div>
