--- a/pages/about.html
+++ b/pages/about.html
@@ -4,11 +4,31 @@
 <div class="row">
   <div class="col-md-7 col-centered">
     <div class="profile-pic"></div>
-    <br>
+    <h3 class="text-center">Tasos Maschalidis (a.k.a. Tashows) is a multitalented, multi-awesome individual, who focuses on Web and Media creations.</h3>
     <div id="bio" class="well">
-      <h3>Tasos Maschalidis (a.k.a. Tashows) is a multitalented, multi-awesome individual, who focuses on Web and Media creations.</h3>
-      <hr>
-      <p>His skillset includes Web Design & Development, Video & Audio Production, Music Composition, Graphic Design, 2D Animation and more. He plays the drums, solves the Rubik's cube in 30 seconds and loves <a href="https://www.youtube.com/user/Vsauce">VSause</a>. He simply is a geek. Who doesn't want to hire a geek? (Hint: Not you!)</p>
+      <p>
+        His skillset includes Web Design & Development, Video & Audio Production, Music Composition, Graphic Design, 2D Animation and more.
+        He plays the drums, solves the Rubik's cube in 30 seconds and loves <a href="https://www.youtube.com/user/Vsauce">VSause</a>.
+        He enjoys learning new stuff and facing new challenges every day! Self-taught web developer, a veteran in editing and producing media (some people say he is an audio-commando)
+        and a gamer who loves everything from Tetris to Dota2. If he had to choose one word to describe himself, that would be "geek".
+        Who doesn't want to hire a geek? <span style="font-size:0.75em"><em>(Hint: Not you!)</em></span>
+      </p>
     </div>
+  </div>
+</div>
+
+<br>
+<h3>What people said...</h3>
+<hr>
+<div ng-controller="aboutController">
+  <div class="row">
+    <div ng-repeat="review in reviews">
+      <div class="col-md-6 col-centered">
+        <div class="card">
+          <review body="{{ review.body }}" author="{{ review.author }}" author-url="{{ review.authorUrl }}"></review>
+        </div>
+      </div>
+    </div>
+    
   </div>
 </div>
